--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+    - name: ab
+      run: |
+        ls -la
+
     - name: copy dir via ssh
       uses: garygrossgarten/github-action-scp@release
       with:
