--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: 14
+        node-version: 16
 
     - name: Install dependencies
       run: |
@@ -24,15 +24,11 @@ jobs:
       run: |
         npm run build
 
-    - name: ab
-      run: |
-        ls -la
-
     - name: copy dir via ssh
       uses: garygrossgarten/github-action-scp@release
       with:
         local: ./build
-        remote: /var/www/walking-school.site/test
+        remote: ${{secrets.PATH}}
         username: ${{secrets.USER}}
         host: ${{ secrets.HOST }}
         privateKey: ${{secrets.KEY}}
